horizontal scroll fix

--- a/src/components/EventsHomePage/eventsHomePage.scss
+++ b/src/components/EventsHomePage/eventsHomePage.scss
@@ -237,11 +237,10 @@
           width: 328px;
           @media (max-width: 991px) {
             font-size: 16px;
-            width: 300px;
+            width: 100%;
           }
           @media (max-width: 767px) {
             font-size: 16px;
-            width: 100%;
           }
         }
       }
